; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_hfsplus.c_grub_hfsplus_find_block.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_hfsplus.c_grub_hfsplus_find_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_hfsplus_extent = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_hfsplus_extent*, i32*)* @grub_hfsplus_find_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_hfsplus_find_block(%struct.grub_hfsplus_extent* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.grub_hfsplus_extent*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.grub_hfsplus_extent* %0, %struct.grub_hfsplus_extent** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %7, align 4
  store i32 0, i32* %6, align 4
  br label %10

10:                                               ; preds = %43, %2
  %11 = load i32, i32* %6, align 4
  %12 = icmp slt i32 %11, 8
  br i1 %12, label %13, label %46

13:                                               ; preds = %10
  %14 = load i32, i32* %7, align 4
  %15 = load %struct.grub_hfsplus_extent*, %struct.grub_hfsplus_extent** %4, align 8
  %16 = load i32, i32* %6, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.grub_hfsplus_extent, %struct.grub_hfsplus_extent* %15, i64 %17
  %19 = getelementptr inbounds %struct.grub_hfsplus_extent, %struct.grub_hfsplus_extent* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @grub_be_to_cpu32(i32 %20)
  %22 = icmp slt i32 %14, %21
  br i1 %22, label %23, label %33

23:                                               ; preds = %13
  %24 = load %struct.grub_hfsplus_extent*, %struct.grub_hfsplus_extent** %4, align 8
  %25 = load i32, i32* %6, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.grub_hfsplus_extent, %struct.grub_hfsplus_extent* %24, i64 %26
  %28 = getelementptr inbounds %struct.grub_hfsplus_extent, %struct.grub_hfsplus_extent* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @grub_be_to_cpu32(i32 %29)
  %31 = load i32, i32* %7, align 4
  %32 = add nsw i32 %30, %31
  store i32 %32, i32* %3, align 4
  br label %49

33:                                               ; preds = %13
  %34 = load %struct.grub_hfsplus_extent*, %struct.grub_hfsplus_extent** %4, align 8
  %35 = load i32, i32* %6, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds %struct.grub_hfsplus_extent, %struct.grub_hfsplus_extent* %34, i64 %36
  %38 = getelementptr inbounds %struct.grub_hfsplus_extent, %struct.grub_hfsplus_extent* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @grub_be_to_cpu32(i32 %39)
  %41 = load i32, i32* %7, align 4
  %42 = sub nsw i32 %41, %40
  store i32 %42, i32* %7, align 4
  br label %43

43:                                               ; preds = %33
  %44 = load i32, i32* %6, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %6, align 4
  br label %10

46:                                               ; preds = %10
  %47 = load i32, i32* %7, align 4
  %48 = load i32*, i32** %5, align 8
  store i32 %47, i32* %48, align 4
  store i32 -1, i32* %3, align 4
  br label %49

49:                                               ; preds = %46, %23
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i32 @grub_be_to_cpu32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
